<resources>
    <string name="app_name">橙子</string>
    <string name="hand_send">发送</string>
    <string name="submit">提交</string>
    <string name="hand_blank">&#160;</string>
    <string name="hand_need_compile">发布的视频只能在10秒内，需要编辑</string>
    <string name="hand_compile">编辑</string>
    <string name="shopping_cart">购物车</string>
    <string name="my_reservation">我的预约</string>
    <string name="consult">私享咨询</string>
    <string name="online_consultation">在线面诊</string>
    <string name="beauty_raise">美人筹</string>
    <string name="electronic_invoice">电子发票</string>
    <string name="setting">设置</string>
    <string name="help">规则和帮助</string>
    <string name="feedback">反馈和意见</string>
    <string name="wallet">钱包</string>
    <string name="message">消息</string>
    <string name="my_vip">我的VIP</string>
    <string name="my_order">我的订单</string>
    <string name="amount_spreads">（补差价：¥%1$s）</string>
    <string name="hand_picture">图片</string>
    <string name="hand_camera">相机</string>
    <string name="hand_video_1">视频</string>
    <string name="hand_select_video">选择视频</string>
    <string name="all_goods_type">全部商品</string>
    <string name="all_category_type">全部类别</string>
    <string name="private_refer_hint">您好，我是您的私人美助，请问您需要什么帮助？</string>
    <string name="refer_type_hint">请选择您想咨询的问题类型！</string>
    <string name="refer_matching_hint">正在为您系统匹配，亲，请稍等！</string>
    <string name="refer_matched_hint">请选择您想咨询的医生或咨询师！</string>
    <string name="no_one_recive">当前无人接单，点击自动退出</string>
    <string name="cancel_cousult">取消咨询</string>
    <string name="auto_cancel_60_second_after">%1$d&#160;&#160;后未选择将自动取消咨询</string>
    <string name="choose_all">选择全部</string>
    <string name="next_step">下一步</string>
    <string name="history_invoice">开票历史</string>
    <string name="finish">返回</string>
    <string name="time">时间</string>
    <string name="invoice_looked_up">发票抬头</string>
    <string name="duty_paragraph">税号</string>
    <string name="people_raise_detail">美人筹详情</string>
    <string name="post_people_raise">发布美人筹</string>
    <string name="please_input_money">请输入金额（整数）</string>
    <string name="please_input_money1">请输入金额（整数）</string>
    <string name="yuan">元</string>
    <string name="price">价格</string>
    <string name="please_select">请选择</string>
    <string name="people_raise_type">美人筹类型</string>
    <string name="location_city">所在城市</string>
    <string name="aim_to_achieve">达成目标</string>
    <string name="initiator">发起人</string>
    <string name="post">发布</string>
    <string name="desc">描述：</string>
    <string name="please_input_your_description">请填写你的美人筹描述，1000字以内</string>
    <string name="visit_time_manage">坐诊时间管理</string>
    <string name="rmb_symbol">¥</string>
    <string name="price_place_holder">%1$1.0f</string>
    <string name="price_place_holder_with_unit">¥%1$s</string>
    <string name="price_place_holder_with_unit_d">¥%1$1.0f</string>
    <string name="want_comment">我要评论</string>
    <string name="want_participate">我要参与</string>
    <string name="all_comments">全部评论</string>
    <string name="comments_detail">评论详情</string>
    <string name="post_comment">发表评论</string>
    <string name="view_all">查看全部</string>
    <string name="confirm_order">确认订单</string>
    <string name="ranking_list">排行榜</string>
    <string name="look_for">找</string>
    <string name="lookfor_doctor">找医生</string>
    <string name="lookfor_good">找商品</string>
    <string name="lookfor_org">找机构</string>
    <string name="lookfor_counsoler">找咨询师</string>
    <string name="lookfor_case">找案例</string>
    <string name="lookfor_answer_and_question">找问答</string>
    <string name="vip">VIP</string>
    <string name="credit_enquiry">信用查询</string>
    <string name="help_and_rule">帮助和规则</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="contact_us">联系网站</string>
    <string name="hiring">人才招聘</string>
    <string name="industry_conference_release">行业会议发布</string>
    <string name="training_to_release">培训发布</string>
    <string name="I_want_ask">我要问</string>
    <string name="system_msg">系统消息</string>
    <string name="at_me">\@我的</string>
    <string name="comment_and_thumbup">评论和赞</string>
    <string name="fans">粉丝</string>
    <string name="question_and_answer">问答</string>
    <string name="question_online">在线问答</string>
    <string name="accept_answer_hint">[采纳答案]</string>
    <string name="dist_num">0123456789</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="search_for_content_of_interest">搜索感兴趣的内容</string>
    <string name="search">搜索</string>
    <string name="I_am_going_to_ask">我要问</string>
    <string name="I_want_to_answer">我要答</string>
    <string name="to_answer">我来回答</string>
    <string name="problem_types">问题类型</string>
    <string name="ask_question_hint1">一句话描述你的问题（必填）</string>
    <string name="ask_question_hint2">补充问题描述，1000字以内（选填）</string>
    <string name="percent_50">%1$d/50</string>
    <string name="percent_1000">%1$d/1000</string>
    <string name="answer_hint">请填写你的回答，不超过1000字</string>
    <string name="not_resolved">未解决</string>
    <string name="not_reply">未回复</string>
    <string name="resolved">已解决</string>
    <string name="reply">已回复</string>
    <string name="ask_counselor">问咨询师</string>
    <string name="ask_doctor">问医生</string>
    <string name="resolving_question">待解决问题</string>
    <string name="resolved_question">已解决问题</string>
    <string name="question_detail">问题详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="buy_notice">下单须知</string>
    <string name="purchasing">发起\n拼购</string>
    <string name="snapped_up_immediately">¥%1$s\n立即抢购</string>
    <string name="snapped_up_immediately_seckill">立即抢购</string>
    <string name="add_to_shopcar">加入购物车</string>
    <string name="online_reference_services">在线咨询</string>
    <string name="org_home_page">机构主页</string>
    <string name="launch_group_buy">发起拼购</string>
    <string name="group_buying">正在拼购</string>
    <string name="relative_goods_recommand">相关商品推荐</string>
    <string name="view_more">查看更多</string>
    <string name="our_shop_is_a_best_seller">本店热卖推荐</string>
    <string name="everyone_says">大家说</string>
    <string name="input_your_question_hint">填写我的问题，50字以内</string>
    <string name="input_your_question_answer_hint">回答此问题，100字以内</string>
    <string name="in_the_purchase">去拼购</string>
    <string name="select_counselor">选择咨询师</string>
    <string name="select_doctor">选择医生</string>
    <string name="real_pay">实付金额</string>
    <string name="discount_coupon">优惠券</string>
    <string name="buy_number">购买数量</string>
    <string name="text">2017年12月20日\n至\n2019年12月20日</string>
    <string name="add_professional_experience">添加履历</string>
    <string name="edit_info">编辑信息</string>
    <string name="the_day_after_tomorrow">后天</string>
    <string name="tomorrow">明天</string>
    <string name="today">今天</string>
    <string name="check_out_the_next_two_weeks">查看未来两个星期</string>
    <string name="available_time">可预约时间</string>
    <string name="ta_estimate">Ta评价</string>
    <string name="good_estimate">商品评价</string>
    <string name="compile_profile">编辑信息</string>
    <string name="attention">关注</string>
    <string name="attentioned">已关注</string>
    <string name="cancel_attention">取消关注</string>
    <string name="answer">回答</string>
    <string name="make_an_appointment_with_doctor">预约医生</string>
    <string name="make_an_appointment_with_hospital">预约机构</string>
    <string name="appointment_hint">请填写变美需求，200字以内</string>
    <string name="select_appointment_time">选择预约时间</string>
    <string name="contact_number">联系电话</string>
    <string name="my_username">我的姓名</string>
    <string name="my_appointment_info">我的预约信息</string>
    <string name="publish">发表</string>
    <string name="org_homepage">机构主页</string>
    <string name="hospital_address">医院地址</string>
    <string name="hospital_case_list">医院案例列表</string>
    <string name="chat">聊天</string>
    <string name="user_publish">发表(%1$s)</string>
    <string name="user_collect">收藏(%1$s)</string>
    <string name="user_ask">提问(%1$s)</string>
    <string name="user_answer">回答(%1$s)</string>
    <string name="some_praise">点过赞的</string>
    <string name="thumbup">赞</string>
    <string name="seckill">限时秒杀</string>
    <string name="From_the_end_of_the">距结束</string>
    <string name="From_the_start_of_the">距开始</string>
    <string name="sss">14:00\n抢购中</string>
    <string name="detail">详情</string>
    <string name="case_detail">案例详情</string>
    <string name="trade_dynamic">交易动态</string>
    <string name="academic_dynamic">学术动态</string>
    <string name="cases_user_codes">身份证号：</string>
    <string name="cases_phone">联系电话：</string>
    <string name="cases_address">所在地址：</string>
    <string name="cases_height">身高：</string>
    <string name="cases_weight">体重：</string>
    <string name="cases_heart_rate">心率：</string>
    <string name="cases_blood_pressure">血压：</string>
    <string name="blood_type">血型：</string>
    <string name="smoke">吸烟频率：</string>
    <string name="drink_wine">喝酒频率：</string>
    <string name="exercise">锻炼频率：</string>
    <string name="family_diseases">是否有家族遗传病：</string>
    <string name="hand_active_start_time">%1$s开始</string>
    <string name="hand_just_now">刚刚</string>
    <string name="hand_minutes_ago">分钟前</string>
    <string name="hand_hours_ago">小时前</string>
    <string name="hand_days_ago">天前</string>
    <string name="hand_months_ago">月前</string>
    <string name="hand_years_ago">年前</string>
    <string name="hand_night">晚上</string>
    <string name="hand_before_dawn">凌晨</string>
    <string name="hand_afternoon">下午</string>
    <string name="hand_morning">上午</string>
    <string name="hand_yesterday">昨天</string>
    <string name="guess_what_you_like">猜你喜欢</string>
    <string name="third_part">第三方合作</string>
    <string name="blank"></string>
    <string name="buy_num">&#160;%1$d人付款</string>
    <string name="coupon_buy_full">购买满</string>
    <string name="coupon_yuan_available">元可用</string>
    <string name="the_yuan">¥</string>
    <string name="cart_total">合计：</string>
    <string name="doctor_rank_score">%1$s&#160;&#160;&#160;%2$s分</string>
    <string name="doctor_rank_time">本周榜单(%1$s-%2$s)</string>
    <string name="order_number">数量：</string>
    <string name="score_placeholder">%1$s分</string>
    <string name="order_verification_code">验证码   </string>
    <string name="pay_order_number">订单编号：</string>
    <string name="pay_goods_name">商品名称：</string>
    <string name="pay_buy_way">购买方式：</string>
    <string name="order_person">人</string>
    <string name="score">分</string>
    <string name="yuan_year">元/年</string>
    <string name="tv_orange_credit">橙子信用：</string>
    <string name="people_buy">人付款</string>
    <string name="answer_num">%1$d个回答</string>
    <string name="question_type">问题类型：%1$s</string>
    <string name="wolaihuida">我来回答</string>
    <string name="accept_answer">采纳</string>
    <string name="answer_num_1">%1$d条回答</string>
    <string name="already_accept">已被采纳</string>
    <string name="select_question_type">选择问题类型</string>
    <string name="select_city">选择城市</string>
    <string name="current_location_city">当前定位城市</string>
    <string name="surplus">剩余：</string>
    <string name="raise_name">名称：</string>
    <string name="Have_to_raise_the_amount">已筹金额：</string>
    <string name="complete_progress">完成度：</string>
    <string name="Participate_in_the_user">参与用户</string>
    <string name="participating_organization">参与机构</string>
    <string name="use_flow">使用流程：</string>
    <string name="use_flow_content">到店出示订单二维码或数字验证</string>
    <string name="reserve_information">预约信息：</string>
    <string name="reserve_information_content">请您提前1天预约</string>
    <string name="validity">有效期：</string>
    <string name="validity_content">30天内使用</string>
    <string name="raise_detail_price">价格：</string>
    <string name="raise_people_num">人数：</string>
    <string name="raise_location_city">所在城市：</string>
</resources>