<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bean"
            type="com.chengzi.app.ui.peopleraise.bean.RaiseBean" />

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />
    </data>

    <LinearLayout
        android:id="@+id/raise_detail_header_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raise_name"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bean.category_name}"
                android:textColor="#FF333333"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="horizontal"
            android:visibility="@{TextUtils.isEmpty(bean.dec)?View.GONE:View.VISIBLE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bean.dec}"
                android:textColor="#FF333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raise_detail_price"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_raise_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFF526A"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/raise_people_num"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/person_num_place(bean.people_number)}"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/raise_location_city"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{bean.city}"
                android:textColor="#FF333333"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Have_to_raise_the_amount"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rmb_symbol"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{bean.priceing}"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_progress"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{bean.plan}"
                android:textColor="#FFD40000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp15"
            android:orientation="horizontal"
            android:visibility="@{bean.end_time == 0 || bean.status &gt; 1?View.GONE:View.VISIBLE}"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surplus"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:surplusTime="@{bean.end_time}" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:background="@color/color_f4f3f8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp10"
            android:background="@drawable/left_red_white_square_bg"
            android:paddingLeft="@dimen/dp6"
            android:text="@string/Participate_in_the_user"
            android:textColor="#FF333333"
            android:textSize="15sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_participate_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp15"
            android:nestedScrollingEnabled="false"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:background="@color/color_f4f3f8" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="@dimen/dp10"
            android:background="@drawable/left_red_white_square_bg"
            android:paddingLeft="@dimen/dp6"
            android:text="@string/participating_organization"
            android:textColor="#FF333333"
            android:textSize="15sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_participate_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp3"
            android:nestedScrollingEnabled="false"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            app:reverseLayout="false"
            app:spanCount="4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp10"
            android:background="@color/color_f4f3f8" />

    </LinearLayout>

</layout>
