<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.handong.framework.utils.ClickEventHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5"
        android:orientation="vertical"
        tools:context=".ui.mine.activity.electronicinvoice.ElectronicInvoiceActivity">

        <com.nevermore.oceans.widget.TopBar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerText="@string/electronic_invoice"
            app:rightText="@string/history_invoice" />

        <com.nevermore.oceans.widget.SwipeRefreshView
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_choose_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/iv_choose_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/bg_select_pay"
                    android:onClick="@{v -> listener.handleClick(v,null)}"
                    android:paddingLeft="@dimen/dp15"
                    android:paddingRight="@dimen/dp10" />

                <android.support.v7.widget.AppCompatCheckedTextView
                    android:id="@+id/tv_choose_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="@{v -> listener.handleClick(v,null)}"
                    android:paddingRight="@dimen/dp15"
                    android:text="@string/choose_all"
                    android:textColor="#FF333333"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="@dimen/dp120"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="@{v -> listener.handleClick(v,null)}"
                android:text="@string/next_step"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>